fix margin bottom on small devies so you can see replies

--- a/modules/topics-ui/browser/less/components/topic/topic-reply-list.less
+++ b/modules/topics-ui/browser/less/components/topic/topic-reply-list.less
@@ -1,4 +1,5 @@
 @import "../../colors.less";
+@import "../../break-points";
 
 .topic-reply-list {
   list-style: none;
@@ -7,6 +8,10 @@
   //Placeholder
   margin-bottom: 12rem;
   transition: transform .2s;
+
+  @media @small {
+    margin-bottom: 22rem;
+  }
 }
 
 .topic-reply-list--editor-active {
